instagram and strava updates from 2017-05-19

--- a/index.html
+++ b/index.html
@@ -173,6 +173,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000934.jpg" title="One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more that I cant resist posting. #dadlife #adventuredad #bicycle #cycling #fatbike #lakemichigan #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000934.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000931.jpg" title="Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Two of my favorite cyclists on their early morning ride! Thanks @elliotlovestarbicycles and @agonz21 for the awesome pic!! #lovestarfactoryteam #cyclocross #lovestarbicycles #cyclocrosskids #cyclinginthemidwest #lovestar #cyclocrosschicago #bikeadventure #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000931.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000932.jpg" title="Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Youngest member of @lovestarfactoryteam chillin after an early morning ride! #juniorcyclist #lovestarfactoryteam #cycling #lovestarraceclub #cyclocross #elliotlovestarbicycles #adorablekid #cyclocrosschicago #bicycle #bike #lovestarbicyclebags #cutiepie #onlytwobutalreadyhooked</small>
+                           </div>
+                           <img src="../lsphotos/image000932.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000935.jpg" title="😎😎🚲 #fatbike #cycling #bicycle #adventuredad #lovestarraceclub #lakemichigan" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>😎😎🚲 #fatbike #cycling #bicycle #adventuredad #lovestarraceclub #lakemichigan</small>
+                           </div>
+                           <img src="../lsphotos/image000935.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000933.jpg" title="Lookin' fly in his mini #lovestarraceclub kit. Enjoying a Post ride breakfast at @bagelartcafe #cycling #lilshredder #kidsonbikes #bicycle #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lookin' fly in his mini #lovestarraceclub kit. Enjoying a Post ride breakfast at @bagelartcafe #cycling #lilshredder #kidsonbikes #bicycle #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000933.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000936.jpg" title="Sunrise ride with a little early bird. #babyARC woke up early so changed my Ride plans to include him. Huge thanks to @agonz21 for being flexible on the plan and for snapping this great picture. #bicycle #fatbike #cycling #lilshredder #kidsonbikes #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride with a little early bird. #babyARC woke up early so changed my Ride plans to include him. Huge thanks to @agonz21 for being flexible on the plan and for snapping this great picture. #bicycle #fatbike #cycling #lilshredder #kidsonbikes #adventuredad #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000936.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000929.jpg" title="Well earned rewards for shredding all morning. 🍦
 #cycling #bicycle #bikefamily #lilshredder #clearybikes #icecreamride #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
@@ -350,84 +428,6 @@
                               <small>Shadows on the trail...a long and lonely training ride had me staring at my shadow a lot this morning. #lovestarraceclub #desplainesrivertrail</small>
                            </div>
                            <img src="../lsphotos/image000917.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000916.jpg" title="Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000916.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000915.jpg" title="Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000915.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000914.jpg" title="#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000914.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000913.jpg" title="Sunset shred. #lilshredder #cycling #bicycle #bikechi #clearybikes #mtb #mountainbiking #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset shred. #lilshredder #cycling #bicycle #bikechi #clearybikes #mtb #mountainbiking #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000913.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000912.jpg" title="Pre-ride fuel. Thanks Vince for the coffee! #lovestarraceclub #bagelart" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Pre-ride fuel. Thanks Vince for the coffee! #lovestarraceclub #bagelart</small>
-                           </div>
-                           <img src="../lsphotos/image000912.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000911.jpg" title="Don't let the beach fool you, it was cold and windy this morning. #bicycle #cycling #ridecannondale #lakemichigan #bikechi #gravelbike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Don't let the beach fool you, it was cold and windy this morning. #bicycle #cycling #ridecannondale #lakemichigan #bikechi #gravelbike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000911.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
