--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000916.jpg" title="Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000916.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000915.jpg" title="Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000915.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000914.jpg" title="#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#cycling #bicycle #bikechi #lakemichigan #cyclocross #ridecannondale #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000914.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000913.jpg" title="Sunset shred. #lilshredder #cycling #bicycle #bikechi #clearybikes #mtb #mountainbiking #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset shred. #lilshredder #cycling #bicycle #bikechi #clearybikes #mtb #mountainbiking #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000913.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000912.jpg" title="Pre-ride fuel. Thanks Vince for the coffee! #lovestarraceclub #bagelart" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Pre-ride fuel. Thanks Vince for the coffee! #lovestarraceclub #bagelart</small>
+                           </div>
+                           <img src="../lsphotos/image000912.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000911.jpg" title="Don't let the beach fool you, it was cold and windy this morning. #bicycle #cycling #ridecannondale #lakemichigan #bikechi #gravelbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Don't let the beach fool you, it was cold and windy this morning. #bicycle #cycling #ridecannondale #lakemichigan #bikechi #gravelbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000911.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000910.jpg" title="Table tops and dresses. 🚲👗#lilshredder #adventuredad #raisingstronggirls #cycling #cyclingwithkids #bicycle #clearybikes #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Spring finally starting to peek out. #bikechi #cycling #bicycle #ridecannondale #cyclocross #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000897.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000896.jpg" title="Matching the landscape... #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Matching the landscape... #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000896.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000893.jpg" title="#myparlee and my espresso. Good ride today with Manwich #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>#myparlee and my espresso. Good ride today with Manwich #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000893.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000894.jpg" title="North Shore looking good this morning. #lovestarraceclub @scottbikes_pt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>North Shore looking good this morning. #lovestarraceclub @scottbikes_pt</small>
-                           </div>
-                           <img src="../lsphotos/image000894.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000895.jpg" title="Sunrise stunner. #cycling #bikechi #bicycle #earlyride #coffeeride #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise stunner. #cycling #bikechi #bicycle #earlyride #coffeeride #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000895.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000890.jpg" title="Mud trio. #dadlife #adventuredad #lovestarraceclub #lovestarbicyclebags #clearybikes #striderbikes #bikechi #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mud trio. #dadlife #adventuredad #lovestarraceclub #lovestarbicyclebags #clearybikes #striderbikes #bikechi #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000890.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000891.jpg" title="Cold and muddy trail ride today. Kids were troopers, but it was still short lived. Sometimes the most critical parenting skill is knowing when to quit. #bicycle #bikewinter #cycling #gravelgrinder #lovestarbicyclebags #lovestarraceclub #adventuredad #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold and muddy trail ride today. Kids were troopers, but it was still short lived. Sometimes the most critical parenting skill is knowing when to quit. #bicycle #bikewinter #cycling #gravelgrinder #lovestarbicyclebags #lovestarraceclub #adventuredad #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image000891.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
