--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000024.jpg" title="2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000024.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000025.jpg" title="Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000025.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000026.jpg" title="It's got to be these new kits...way to go, Rob! #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>It's got to be these new kits...way to go, Rob! #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000026.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000027.jpg" title="Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston</small>
+                           </div>
+                           <img src="../lsphotos/image000027.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000028.jpg" title="Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride</small>
+                           </div>
+                           <img src="../lsphotos/image000028.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000092.jpg" title="Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000092.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000093.jpg" title="Custom #LovestarBicycleBags shop apron on the sewing table right now. Really digging the color combo. #handmade #bikemechanic #cycling #bicycle #shoplife #realmenwearaprons #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Custom #LoveStarBicycleBags top tube bag in Black & Pink. #handmade #bicyclebag #cycling #bikepacking #bicycle #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000096.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000038.jpg" title="Mini epic. #LovestarRaceClub #bicycle #cx #chicrosscup #babySNUB #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mini epic. #LovestarRaceClub #bicycle #cx #chicrosscup #babySNUB #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000038.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000039.jpg" title="Well, I didn't get the result I wanted today, but I'll live to fight another day. On the bright side, my bike is now clean. #lovestarraceclub #drwCX #baaw #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Well, I didn't get the result I wanted today, but I'll live to fight another day. On the bright side, my bike is now clean. #lovestarraceclub #drwCX #baaw #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000039.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000040.jpg" title="#LovestarRaceClub warmups at Chicago cross cup #3 #drwcx #chicagocrosscup #cycling #cyclocross #cx #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#LovestarRaceClub warmups at Chicago cross cup #3 #drwcx #chicagocrosscup #cycling #cyclocross #cx #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000040.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000041.jpg" title="Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Skills & drills. #cyclocross #cx #bicycle #cycling #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000041.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000042.jpg" title="Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Chilly #LovestarRaceClub cross practice this morning. #cycling #bicycle #cx #cyclocross #crossishere</small>
-                           </div>
-                           <img src="../lsphotos/image000042.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000097.jpg" title="Black & Lime #LovestarBicycleBags SaddlePack was today's project while the kids were napping. #dadlife #handmade #bicyclebag #cycling #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Black & Lime #LovestarBicycleBags SaddlePack was today's project while the kids were napping. #dadlife #handmade #bicyclebag #cycling #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000097.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
