--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000071.jpg" title="Why drive when you can ride? #lovestarraceclub #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Why drive when you can ride? #lovestarraceclub #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000071.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000072.jpg" title="Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Day 2. @elliotlovestarbicycles Mt. Hood bike packing adventure. View from Surveyors Ridge. #bikecamping #bikepacking #mthood #fatbike #adventurebike #lovestarbicyclebags #custombikebags #lovestarraceclub #lovestarbicyclebags #cycling #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000072.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000106.jpg" title="Mount Hood. #bikepacking #bikecamping #mthood #fatbike #bicycle #adventurebike #cycling #mtb #handmade #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Mount Hood. #bikepacking #bikecamping #mthood #fatbike #bicycle #adventurebike #cycling #mtb #handmade #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000106.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000107.jpg" title="Day 1 in the back country and things are already getting a bit Lord of the Flies out here. #lovestarbicyclebags #bicycle #mthood #fatbike #cycling #bikepacking #bikecamping" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Day 1 in the back country and things are already getting a bit Lord of the Flies out here. #lovestarbicyclebags #bicycle #mthood #fatbike #cycling #bikepacking #bikecamping</small>
+                           </div>
+                           <img src="../lsphotos/image000107.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000108.jpg" title="28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image000108.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000109.jpg" title="Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000109.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000076.jpg" title="All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -181,84 +259,6 @@
                               <small>#crossiscoming skillz&drillz team rides have begun. #cycling #bicycle #cx #bikechi #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000079.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000547.jpg" title="Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000547.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000548.jpg" title="Good Morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Good Morning. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000548.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000549.jpg" title="Took the fatty on my first trail ride. Feel like I discovered a whole new world! #fatbike #borealis #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Took the fatty on my first trail ride. Feel like I discovered a whole new world! #fatbike #borealis #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000549.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000115.jpg" title="#LovestarBicycleBags #handmade #bikepacking #bikepackingbag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#LovestarBicycleBags #handmade #bikepacking #bikepackingbag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000115.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000116.jpg" title="Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000116.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000117.jpg" title="Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000117.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
