--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000547.jpg" title="Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Felt great to ride on my streets again this morning. #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000547.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000548.jpg" title="Good Morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Good Morning. #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000548.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000549.jpg" title="Took the fatty on my first trail ride. Feel like I discovered a whole new world! #fatbike #borealis #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Took the fatty on my first trail ride. Feel like I discovered a whole new world! #fatbike #borealis #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000549.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000115.jpg" title="#LovestarBicycleBags #handmade #bikepacking #bikepackingbag #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#LovestarBicycleBags #handmade #bikepacking #bikepackingbag #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000115.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000116.jpg" title="Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a fun custom #LovestarBicycleBags frame bag today. Deep purple to match the old-school-cool acid wash paint on this vintage Ross. Mixed in some Red highlights to compliment the overall color pallet on the bike. The entire bag is made of 1000D #Cordura so it should last the owner another 20 years. #handmade #bicyclebag #cycling #bicycle #mtb #bikepacking #bikepackingbag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000116.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000117.jpg" title="Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Black and purple #LovestarBicycleBags SaddlePack going out the door! #handmade #bicyclebag #cycling #bicycle #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000117.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000550.jpg" title="Fellowship of the Big Ring. #bicycle #cycling #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Pair of Parlees #lovestarfactoryteam #cycling #bikechi #bicycle #myparlee</small>
                            </div>
                            <img src="../lsphotos/image000556.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000557.jpg" title="This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>This guy...always a class act. #lovestarfactoryteam #cycling #bicycle #sockdoping</small>
-                           </div>
-                           <img src="../lsphotos/image000557.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000121.jpg" title="My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>My Vader mask off-cranium. #lazersport #magnetoM2 #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000121.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000558.jpg" title="#sockdoping game was strong today...#cycling #bicycle #coffeeride #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#sockdoping game was strong today...#cycling #bicycle #coffeeride #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000558.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000559.jpg" title="#lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>#lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000559.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000560.jpg" title="Glorious, sunny morning. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Glorious, sunny morning. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000560.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000561.jpg" title="Sunrise coffee rides. #lovestarfactoryteam #bicycle #cycling #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise coffee rides. #lovestarfactoryteam #bicycle #cycling #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000561.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
