--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,88 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000582.jpg" title="Staged and ready for tomorrow's #almanzo100 ...you know you're in for a good day when your bikes get all muddy just driving to the race start. #cycling #gravelgrinder #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Staged and ready for tomorrow's #almanzo100 ...you know you're in for a good day when your bikes get all muddy just driving to the race start. #cycling #gravelgrinder #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000582.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000583.jpg" title="Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Obligatory pre-race caravan photo. Rolling out to the #almanzo100 this weekend. #lovestarfactoryteam #cycling #bicycle #gravelgrinder</small>
+                           </div>
+                           <img src="../lsphotos/image000583.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000584.jpg" title="It's Wednesday, time to dream up a ROUTT for the weekend. Long ride or short ride, it's all an adventure. #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfactoryteam #lakemichigan #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>mootscycles</h4>
+                              <small>It's Wednesday, time to dream up a ROUTT for the weekend. Long ride or short ride, it's all an adventure. #Repost @elliotlovestarbicycles with @repostapp.
+・・・
+So many cool #fog photos this morning... #cycling #moots #bicycle #lovestarfactoryteam #lakemichigan #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000584.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000585.jpg" title="&quot;...The grey rain-curtain of this world rolls back, and all turns to silver glass, and then you see it...White shores, and beyond, a far green country under a swift sunrise.&quot; #cycling #tolkien #bicycle #moots #lovestarfactoryteam #lakemichigan #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>"...The grey rain-curtain of this world rolls back, and all turns to silver glass, and then you see it...White shores, and beyond, a far green country under a swift sunrise." #cycling #tolkien #bicycle #moots #lovestarfactoryteam #lakemichigan #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000585.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000133.jpg" title="Just another day at the disco with extra fog machine. PC: @elliotlovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Just another day at the disco with extra fog machine. PC: @elliotlovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000133.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000586.jpg" title="From today's foggy sunrise ride. #lovestarfactoryteam #cycling PC: @elliotlovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>From today's foggy sunrise ride. #lovestarfactoryteam #cycling PC: @elliotlovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image000586.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000587.jpg" title="Foggy Sunrise ride. #lovestarfactoryteam #cycling #bicycle #bikechi #championsystem" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +263,6 @@
                               <small>Finished up a fun custom #lovestarbicyclebags SaddlePack tonight. #handmade #bicyclebag #bikepacking #cycling #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000138.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000596.jpg" title="Scenic Sunrise Solo #cycling #bicycle #moots #psychloX #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Scenic Sunrise Solo #cycling #bicycle #moots #psychloX #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000596.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000139.jpg" title="Ok, Elliot...I know you're in there somewhere!!! Go lovestarfactoryteam! #lovestarcyclingteam #lovestarbicyclebags #lovestar #cyclocrosschicago #barryroubaix #barryroubaix2016" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Ok, Elliot...I know you're in there somewhere!!! Go lovestarfactoryteam! #lovestarcyclingteam #lovestarbicyclebags #lovestar #cyclocrosschicago #barryroubaix #barryroubaix2016</small>
-                           </div>
-                           <img src="../lsphotos/image000139.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000140.jpg" title="So proud!!! Congratulations @elliotlovestarbicycles for an awesome showing at #barryroubaix today!!!!! Go lovestarfactoryteam!!!!! #lovestarcyclingteam #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cyclocrosschicago #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>So proud!!! Congratulations @elliotlovestarbicycles for an awesome showing at #barryroubaix today!!!!! Go lovestarfactoryteam!!!!! #lovestarcyclingteam #lovestarbicyclebags #lovestarfactoryteam #cyclocross #cyclocrosschicago #cyclocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000140.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000597.jpg" title="Thanks to @theandyhudson for snapping this pic of me while we crushed 62 mi of gravel at the Barry Roubaix #lovestarfactoryteam #barryroubaix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>Thanks to @theandyhudson for snapping this pic of me while we crushed 62 mi of gravel at the Barry Roubaix #lovestarfactoryteam #barryroubaix</small>
-                           </div>
-                           <img src="../lsphotos/image000597.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000598.jpg" title="Quick photo op at mile 50 w/ my suffer-partner @agonz21 #BarryRoubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Quick photo op at mile 50 w/ my suffer-partner @agonz21 #BarryRoubaix #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000598.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000599.jpg" title="Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000599.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
