--- a/instagram19.html
+++ b/instagram19.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000146.jpg" title="Finished up a stealthy black custom frame at tonight. Just a hint of blue on the exterior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bikepacking #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a stealthy black custom frame at tonight. Just a hint of blue on the exterior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bikepacking #bikepackingbags #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000146.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000147.jpg" title="70 degrees yesterday. Snow flurries this morning...welcome to #Chicago . decided to use my old Almanzo 100 #lovestarbicyclebags top tube bag this morning to try and brighten up my ride a little bit. #moots #lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>70 degrees yesterday. Snow flurries this morning...welcome to #Chicago . decided to use my old Almanzo 100 #lovestarbicyclebags top tube bag this morning to try and brighten up my ride a little bit. #moots #lovestarbicyclebags #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000147.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000609.jpg" title="I guess deep down, I kept hoping them at the forecasts for snow and freezing rain were all a big April fools gag. #cycling #bikechi #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I guess deep down, I kept hoping them at the forecasts for snow and freezing rain were all a big April fools gag. #cycling #bikechi #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000609.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000610.jpg" title="Sometimes the group ride is just as fun when it's just two peeps.  #lovestarfactoryteam #myparlee #bagelart #lsbbc" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sometimes the group ride is just as fun when it's just two peeps.  #lovestarfactoryteam #myparlee #bagelart #lsbbc</small>
+                           </div>
+                           <img src="../lsphotos/image000610.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000148.jpg" title="Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Today's ride pace. #bicycle #cycling #clearybikes #lovestarbicyclebags #optoutside #outsideisfree #futurecyclist #babySNUB</small>
+                           </div>
+                           <img src="../lsphotos/image000148.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000611.jpg" title="#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#tbt to @casadewaggoner leading the #lovestarfactoryteam across the finish line at last year's #Almanzo 100</small>
+                           </div>
+                           <img src="../lsphotos/image000611.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000612.jpg" title="Mud stud. #lovestarfactoryteam #gravelgrinder #dprt #cycling #bicycle #gravel" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Today. #cycling #parlee #scottbikes #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000618.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000619.jpg" title="#babyARC wasn't quite as sure about this cobbles thing as his sister... #cobbles #cycling #futurecyclist #thulechariot #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babyARC wasn't quite as sure about this cobbles thing as his sister... #cobbles #cycling #futurecyclist #thulechariot #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000619.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000156.jpg" title="Not a long ride...but an important one. #vote #lovestarbicyclebags #cycling #illinoisprimary" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Not a long ride...but an important one. #vote #lovestarbicyclebags #cycling #illinoisprimary</small>
-                           </div>
-                           <img src="../lsphotos/image000156.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000157.jpg" title="Pockets! #handmade #cycling #bicyclebag #lovestarbicyclebags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pockets! #handmade #cycling #bicyclebag #lovestarbicyclebags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000157.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000158.jpg" title="Finished up all the strapping and riveting today. #lovestarbicyclebags #handmade #cycling #bicyclebag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up all the strapping and riveting today. #lovestarbicyclebags #handmade #cycling #bicyclebag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000158.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000159.jpg" title="Custom #lovestarbicyclebags roll-top porteur bag shipping out today. #handmade #cycling #bicyclebag #bicycle #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #lovestarbicyclebags roll-top porteur bag shipping out today. #handmade #cycling #bicyclebag #bicycle #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000159.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000620.jpg" title="That was a good ride. #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>That was a good ride. #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000620.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
