--- a/instagram22.html
+++ b/instagram22.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000180.jpg" title="Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold morning Ride. #lovestarfactoryteam #lovestarbicyclebags #bikewinter #cycling #moots </small>
+                           </div>
+                           <img src="../lsphotos/image000180.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000181.jpg" title="Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Busted out the skinny tire's today. Kicking off spring training for a ambitious #gravelgrinder season... #BarrYRoubaix #Almanzo100 and #DirtyKanza 200 are all on the books for this year. #lovestarbicyclebags #lovestarfactoryteam </small>
+                           </div>
+                           <img src="../lsphotos/image000181.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000182.jpg" title="#lakemichigan never disappoints. #fatbike #fatbikefriday #bikepackingbags #pogies #lovestarbicyclebags #cycling #bicycle #bikewinter " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#lakemichigan never disappoints. #fatbike #fatbikefriday #bikepackingbags #pogies #lovestarbicyclebags #cycling #bicycle #bikewinter </small>
+                           </div>
+                           <img src="../lsphotos/image000182.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000183.jpg" title="#fatbikefriday ride exploring some new trails. #fatbike #pogies #bikepackingbags #lovestarbicyclebags " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#fatbikefriday ride exploring some new trails. #fatbike #pogies #bikepackingbags #lovestarbicyclebags </small>
+                           </div>
+                           <img src="../lsphotos/image000183.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000184.jpg" title="Commute. #bikewinter #fatbike #pogies #bikepackingbags #lovestarbicyclebags #bikecommute " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Commute. #bikewinter #fatbike #pogies #bikepackingbags #lovestarbicyclebags #bikecommute </small>
+                           </div>
+                           <img src="../lsphotos/image000184.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000185.jpg" title="It may have been a coincidence...but I was the only one not running studded tire's tonight...and I was the only one who crashed twice before even getting to the trailhead. Sitting at home looking at studded tire's online...#fatbike #bikewinter #bikepackingbags #bikepacking #pogies #lovestarbicyclebags " rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It may have been a coincidence...but I was the only one not running studded tire's tonight...and I was the only one who crashed twice before even getting to the trailhead. Sitting at home looking at studded tire's online...#fatbike #bikewinter #bikepackingbags #bikepacking #pogies #lovestarbicyclebags </small>
+                           </div>
+                           <img src="../lsphotos/image000185.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000186.jpg" title="Testing begins... #pogies #handmade #lovestarbicyclebags #fatbike #bikewinter #SewRad " rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -185,84 +263,6 @@ Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate t
 Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
                            </div>
                            <img src="../lsphotos/image000196.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000197.jpg" title="Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000197.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000198.jpg" title="Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride</small>
-                           </div>
-                           <img src="../lsphotos/image000198.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000199.jpg" title="...then the fog rolled in. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>...then the fog rolled in. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000199.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000200.jpg" title="Wintry mix of sleet & snow & rain with temps bouncing around the freezing point everything was a muddy snowy slop fest. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Wintry mix of sleet & snow & rain with temps bouncing around the freezing point everything was a muddy snowy slop fest. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000200.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000201.jpg" title="January ride, complete with coffee & donut stop. #babySNUB #babyARC #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #adventuredad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>January ride, complete with coffee & donut stop. #babySNUB #babyARC #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #adventuredad</small>
-                           </div>
-                           <img src="../lsphotos/image000201.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000202.jpg" title="My mother-in-law was my hero tonight for watching the kids so I could hop out for a quick night ride on some snowy trails. #fatbike #lovestarbicyclebags #bikepacking #bikepackingbags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>My mother-in-law was my hero tonight for watching the kids so I could hop out for a quick night ride on some snowy trails. #fatbike #lovestarbicyclebags #bikepacking #bikepackingbags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000202.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
