--- a/instagram23.html
+++ b/instagram23.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000197.jpg" title="Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a set of micro-pogies for a #clearybikes Gecko. Hard to appreciate the scale of these from the photo, but they are adorbs. #lovestarbicyclebags #bikepacking #fatbike #pogies #bikewinter #futurecyclist #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000197.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000198.jpg" title="Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fresh snow! After the first mile or so on the #northbranchtrail the conditions were so perfect, I turned off all of my lights and rode in darkness. As my eyes adjusted I could see everything, and it was so quiet with the fresh snow...It was beautiful beyond description. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #nightride</small>
+                           </div>
+                           <img src="../lsphotos/image000198.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000199.jpg" title="...then the fog rolled in. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>...then the fog rolled in. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000199.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000200.jpg" title="Wintry mix of sleet & snow & rain with temps bouncing around the freezing point everything was a muddy snowy slop fest. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Wintry mix of sleet & snow & rain with temps bouncing around the freezing point everything was a muddy snowy slop fest. #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000200.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000201.jpg" title="January ride, complete with coffee & donut stop. #babySNUB #babyARC #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #adventuredad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>January ride, complete with coffee & donut stop. #babySNUB #babyARC #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #adventuredad</small>
+                           </div>
+                           <img src="../lsphotos/image000201.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000202.jpg" title="My mother-in-law was my hero tonight for watching the kids so I could hop out for a quick night ride on some snowy trails. #fatbike #lovestarbicyclebags #bikepacking #bikepackingbags #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>My mother-in-law was my hero tonight for watching the kids so I could hop out for a quick night ride on some snowy trails. #fatbike #lovestarbicyclebags #bikepacking #bikepackingbags #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000202.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000203.jpg" title="First (very icy) miles of 2016! #fatbike #fatbikefriday #cycling #bicycle #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -185,84 +263,6 @@ Angry sky & punishing winds for today's #raphafestive500 ride. #cycling #cyclocr
                               <small>So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem</small>
                            </div>
                            <img src="../lsphotos/image000082.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000641.jpg" title="First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000641.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000212.jpg" title="...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000212.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000213.jpg" title="#ElNino continues to impress. Shorts & T-shirt ride this morning...and it's mid-December. #fatbikefriday #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#ElNino continues to impress. Shorts & T-shirt ride this morning...and it's mid-December. #fatbikefriday #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000213.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000085.jpg" title="A bit unreal that today's ride was done on my road whip wearing lightweight layers. I have my first fatbike race this weekend and temps are supposed to be in he mid-fifties. Isn't it the second week of December...in Chicago!?! Crazy El Niño. #lovestarbicyclebags #cycling #Chicago #ElNino" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A bit unreal that today's ride was done on my road whip wearing lightweight layers. I have my first fatbike race this weekend and temps are supposed to be in he mid-fifties. Isn't it the second week of December...in Chicago!?! Crazy El Niño. #lovestarbicyclebags #cycling #Chicago #ElNino</small>
-                           </div>
-                           <img src="../lsphotos/image000085.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000642.jpg" title="Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000642.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000214.jpg" title="Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground</small>
-                           </div>
-                           <img src="../lsphotos/image000214.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
