--- a/instagram24.html
+++ b/instagram24.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000641.jpg" title="First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000641.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000212.jpg" title="...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000212.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000213.jpg" title="#ElNino continues to impress. Shorts & T-shirt ride this morning...and it's mid-December. #fatbikefriday #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#ElNino continues to impress. Shorts & T-shirt ride this morning...and it's mid-December. #fatbikefriday #fatbike #lovestarbicyclebags #bikepackingbags #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000213.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000085.jpg" title="A bit unreal that today's ride was done on my road whip wearing lightweight layers. I have my first fatbike race this weekend and temps are supposed to be in he mid-fifties. Isn't it the second week of December...in Chicago!?! Crazy El Niño. #lovestarbicyclebags #cycling #Chicago #ElNino" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A bit unreal that today's ride was done on my road whip wearing lightweight layers. I have my first fatbike race this weekend and temps are supposed to be in he mid-fifties. Isn't it the second week of December...in Chicago!?! Crazy El Niño. #lovestarbicyclebags #cycling #Chicago #ElNino</small>
+                           </div>
+                           <img src="../lsphotos/image000085.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000642.jpg" title="Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Killer afternoon hammer fest with these two. Only 363 days until #MontroseCX 2016. #cycling #bicycle #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000642.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000214.jpg" title="Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground</small>
+                           </div>
+                           <img src="../lsphotos/image000214.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000215.jpg" title="Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -181,84 +259,6 @@
                               <small>Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000221.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000650.jpg" title="Happy Holidays from the #LovestarFactoryTeam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Happy Holidays from the #LovestarFactoryTeam</small>
-                           </div>
-                           <img src="../lsphotos/image000650.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000222.jpg" title="Handsome pair of #lovestarbicyclebags went out the door today. #handmade #bicyclebag #bikepackingbags #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Handsome pair of #lovestarbicyclebags went out the door today. #handmade #bicyclebag #bikepackingbags #bikepacking #cycling #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000222.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000223.jpg" title="Finished up this blue Cordura #lovestarbicyclebags top tube bag. Part of a matching set heading out to a customer tomorrow! #bikepackingbags #handmade #bicyclebag #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this blue Cordura #lovestarbicyclebags top tube bag. Part of a matching set heading out to a customer tomorrow! #bikepackingbags #handmade #bicyclebag #bikepacking #cycling #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000223.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000224.jpg" title="XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>XPac & Cordura #lovestarbicyclebags Saddlepack in a sharp looking black and grey. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000224.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000225.jpg" title="Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000225.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000226.jpg" title="Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000226.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
