--- a/instagram36.html
+++ b/instagram36.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000333.jpg" title="Finished up the sister #lovestarbicyclebags SaddlePack to yesterday's post. Two bags two bikes one lucky customer. #handmade #cycling #bicycle #bikechi #cycling #bikepacking #bicyclebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up the sister #lovestarbicyclebags SaddlePack to yesterday's post. Two bags two bikes one lucky customer. #handmade #cycling #bicycle #bikechi #cycling #bikepacking #bicyclebag</small>
+                           </div>
+                           <img src="../lsphotos/image000333.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000755.jpg" title="Cemetery ride! #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Cemetery ride! #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000755.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000334.jpg" title="Custom #lovestarbicyclebags SaddlePack got finished up tonight. Racing stripes to match the bike. #handmade #bicycle #bikechi #bikestyle #bicyclebag #seatbg #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags SaddlePack got finished up tonight. Racing stripes to match the bike. #handmade #bicycle #bikechi #bikestyle #bicyclebag #seatbg #bikepacking #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000334.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000335.jpg" title="Double trouble. #lovestarbicyclebags #cycling #bicycle #bikechi #bikestyle #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Double trouble. #lovestarbicyclebags #cycling #bicycle #bikechi #bikestyle #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000335.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000336.jpg" title="Short sleeves & skinny tires. Lovestar Factory Team looking sharp & lovin' the warmer temps. #lovestarbicyclebags #championsystem #teamride #teamcolors #bikestyle #cycling #bikechi #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Short sleeves & skinny tires. Lovestar Factory Team looking sharp & lovin' the warmer temps. #lovestarbicyclebags #championsystem #teamride #teamcolors #bikestyle #cycling #bikechi #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000336.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000337.jpg" title="Creative frame designs require creative frame bags. This #lovestarbicyclebags custom framebag was made for a customers frankenbike. #framebagFriday #custom #handmade #bikepacking #cycling #bikechi #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Creative frame designs require creative frame bags. This #lovestarbicyclebags custom framebag was made for a customers frankenbike. #framebagFriday #custom #handmade #bikepacking #cycling #bikechi #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000337.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000338.jpg" title="Batch of #Lovestarbicyclebags SaddlePacks in the works. Racing stripes all around! #handmade #custom #cycling #bicycle #bikebag #bikepacking #bikechi #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000350.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000351.jpg" title="It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride</small>
-                           </div>
-                           <img src="../lsphotos/image000351.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000352.jpg" title="Stealthy Black Lovestar Saddlepack with blaze orange interior. #lovestarbicyclebags #handmade #SewRad #cycling #bikebacking #bikechi #bicycle #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stealthy Black Lovestar Saddlepack with blaze orange interior. #lovestarbicyclebags #handmade #SewRad #cycling #bikebacking #bikechi #bicycle #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000352.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000353.jpg" title="Red & black Lovestar SaddlePack. #lovestarbicyclebags #handmade #SewRad #bikebacking #cycling #bicycle #bicyclebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Red & black Lovestar SaddlePack. #lovestarbicyclebags #handmade #SewRad #bikebacking #cycling #bicycle #bicyclebag</small>
-                           </div>
-                           <img src="../lsphotos/image000353.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000354.jpg" title="Finished up a pair of Lovestar SaddlePacks last night. #lovestarbicyclebags #handmade  #bicyclebag #bicycle #bikechi #seatbag #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a pair of Lovestar SaddlePacks last night. #lovestarbicyclebags #handmade  #bicyclebag #bicycle #bikechi #seatbag #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000354.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000355.jpg" title="Details. #handmade #lovestarbicyclebags #cycling #bicyclebag #bikepacking #bikechi #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Details. #handmade #lovestarbicyclebags #cycling #bicyclebag #bikepacking #bikechi #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000355.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000356.jpg" title="Lovestar Factory Team ride. #lovestarbicyclebags #bikechi #chiberia #chicago #bikewinter #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team ride. #lovestarbicyclebags #bikechi #chiberia #chicago #bikewinter #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000356.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
