--- a/instagram41.html
+++ b/instagram41.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000431.jpg" title="Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000431.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000432.jpg" title="Grassy hill repeats & barrier practice for tonight's ride. #cyclocross #cycling #moots #psychloX #barriers #lovestarbicycles #lovestarbicyclebags #bikechi #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Grassy hill repeats & barrier practice for tonight's ride. #cyclocross #cycling #moots #psychloX #barriers #lovestarbicycles #lovestarbicyclebags #bikechi #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000432.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000433.jpg" title="Finished up the sister bag to last nights post. 2 custom Saddle Packs going out this week. #handmade #bikebag #bikechi #bikepacking #bicycle #madeinchicago #cycling #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up the sister bag to last nights post. 2 custom Saddle Packs going out this week. #handmade #bikebag #bikechi #bikepacking #bicycle #madeinchicago #cycling #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000433.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000434.jpg" title="Custom Grey & Black SaddlePack with Red interior and a couple of Red highlights. #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikebag #bikechi #madeinchicago #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Grey & Black SaddlePack with Red interior and a couple of Red highlights. #lovestarbicycles #lovestarbicyclebags #handmade #cycling #bikebag #bikechi #madeinchicago #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000434.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000435.jpg" title="Pair of custom SaddlePacks in the works. #lovestarbicycles #lovestarbicyclebags #cycling #bikepacking #bikechi #bikebag #bicycle #handmade #madeinchicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pair of custom SaddlePacks in the works. #lovestarbicycles #lovestarbicyclebags #cycling #bikepacking #bikechi #bikebag #bicycle #handmade #madeinchicago</small>
+                           </div>
+                           <img src="../lsphotos/image000435.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000436.jpg" title="Some fun colors on the workbench tonight. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #bikebag #bikepacking #bikechi #madeinchicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some fun colors on the workbench tonight. #handmade #lovestarbicycles #lovestarbicyclebags #cycling #bikebag #bikepacking #bikechi #madeinchicago</small>
+                           </div>
+                           <img src="../lsphotos/image000436.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000437.jpg" title="Yesterday's evening ride with teammate @agonz21 I may be a bit biased but these kits look so dope. #lovestarbicycles #lovestarbicyclebags #bikechi #cycling #roadie #bicycle #championsystem" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing</small>
                            </div>
                            <img src="../lsphotos/image000450.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000451.jpg" title="Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000451.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000757.jpg" title="Beautiful day for a race! #lovestarfactoryteam #cycling #bikeracing #chicagocycling #racechicago #elliotlovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Beautiful day for a race! #lovestarfactoryteam #cycling #bikeracing #chicagocycling #racechicago #elliotlovestar</small>
-                           </div>
-                           <img src="../lsphotos/image000757.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000452.jpg" title="Finished up a customers Grey / Black SaddlePack with Yellow interior tonight. #lovestarbicyclebags #handmade #bikepacking #bikechi #madeinchicago #bikebag #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a customers Grey / Black SaddlePack with Yellow interior tonight. #lovestarbicyclebags #handmade #bikepacking #bikechi #madeinchicago #bikebag #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000452.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000453.jpg" title="Everyone has their own per-race rituals...mine starts the night before a race, Laying out everything I plan on takin' with me. See y'all out at Relay CX tomorrow! #cyclocross #cx #moots #lovestarbicyclebags #bikechi #CCCX" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Everyone has their own per-race rituals...mine starts the night before a race, Laying out everything I plan on takin' with me. See y'all out at Relay CX tomorrow! #cyclocross #cx #moots #lovestarbicyclebags #bikechi #CCCX</small>
-                           </div>
-                           <img src="../lsphotos/image000453.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000454.jpg" title="Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom</small>
-                           </div>
-                           <img src="../lsphotos/image000454.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000455.jpg" title="And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000455.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
