--- a/instagram42.html
+++ b/instagram42.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000451.jpg" title="Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000451.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000757.jpg" title="Beautiful day for a race! #lovestarfactoryteam #cycling #bikeracing #chicagocycling #racechicago #elliotlovestar" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful day for a race! #lovestarfactoryteam #cycling #bikeracing #chicagocycling #racechicago #elliotlovestar</small>
+                           </div>
+                           <img src="../lsphotos/image000757.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000452.jpg" title="Finished up a customers Grey / Black SaddlePack with Yellow interior tonight. #lovestarbicyclebags #handmade #bikepacking #bikechi #madeinchicago #bikebag #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a customers Grey / Black SaddlePack with Yellow interior tonight. #lovestarbicyclebags #handmade #bikepacking #bikechi #madeinchicago #bikebag #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000452.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000453.jpg" title="Everyone has their own per-race rituals...mine starts the night before a race, Laying out everything I plan on takin' with me. See y'all out at Relay CX tomorrow! #cyclocross #cx #moots #lovestarbicyclebags #bikechi #CCCX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Everyone has their own per-race rituals...mine starts the night before a race, Laying out everything I plan on takin' with me. See y'all out at Relay CX tomorrow! #cyclocross #cx #moots #lovestarbicyclebags #bikechi #CCCX</small>
+                           </div>
+                           <img src="../lsphotos/image000453.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000454.jpg" title="Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a custom Saddle Pack. Hard to do justice to these colors in a picture...the pink, orange, white & sky blue look pretty sweet together. #handmade #lovestarbicyclebags #cycling #bikepacking #custom</small>
+                           </div>
+                           <img src="../lsphotos/image000454.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000455.jpg" title="And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>And a close-up. #lovestarbicyclebags #bikebag #bikechi #handmade #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000455.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000456.jpg" title="Finished up a custom Fuel Bag for a customer today. Black and red looked so good I had to use my own bike for the photoshoot. #custom #handmade #madeinchicago #bikechi #bikepacking #cycling #bikebag #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000469.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000470.jpg" title="Next level cycling style...matching your saddle pack to your team kit.  #nextlevel #cycling #lovestarbicyclebags #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Next level cycling style...matching your saddle pack to your team kit.  #nextlevel #cycling #lovestarbicyclebags #bikechi #handmade #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000470.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000471.jpg" title="Orange and Dark Grey custom Lovestar framebag for a Novara mountain bike.  #lovestarbicyclebags #bicycle #bikechi #bicyclebag #bikepacking #bikecamping #cycling #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Orange and Dark Grey custom Lovestar framebag for a Novara mountain bike.  #lovestarbicyclebags #bicycle #bikechi #bicyclebag #bikepacking #bikecamping #cycling #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000471.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000472.jpg" title="Finished with fabrication for this custom framebag... Time to begin construction! #handmade #cycling  #lovestarbicyclebags #bicyclebag #bikechi #bikepacking #bikecamping" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished with fabrication for this custom framebag... Time to begin construction! #handmade #cycling  #lovestarbicyclebags #bicyclebag #bikechi #bikepacking #bikecamping</small>
-                           </div>
-                           <img src="../lsphotos/image000472.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000473.jpg" title="Custom Lovestar framebag in the works...lots of orange! #handmade #bicycle #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom Lovestar framebag in the works...lots of orange! #handmade #bicycle #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000473.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000474.jpg" title="Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Set up a temporary workspace on vacation. Cranked out this lime-green & black Saddle Pack tonight. #lovestarbicyclebags #cycling #handmade #bicycle #bikechi #singersewingmachines #vacationprojects</small>
-                           </div>
-                           <img src="../lsphotos/image000474.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000475.jpg" title="There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>There's more than one way to prove how much you've been riding. #cycling #bikechi #lovestarbicyclebags #coffeerides</small>
-                           </div>
-                           <img src="../lsphotos/image000475.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
