--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,84 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000003.jpg" title="Today's off to a good start. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Today's off to a good start. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000003.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000002.jpg" title="Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>boorittany</h4>
+                              <small>Eli has been trying to put screws and tools in his shirt to fix his bike on the way to the Y, and Nora giggled and danced in excitement that her and Eli are matching. #LoveStarRaceClub #littlelovestarracers</small>
+                           </div>
+                           <img src="../lsphotos/image000002.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000012.jpg" title="Sunrise sand riding #cycling #bicycle #fatbike #bikechi #lakemichigan #bikepacking #LoveStarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise sand riding #cycling #bicycle #fatbike #bikechi #lakemichigan #bikepacking #LoveStarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000012.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000013.jpg" title="Always smiling when I get to ride with @agonz21 #cycling #bicycle #bikechi #coffeeride #LoveStarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Always smiling when I get to ride with @agonz21 #cycling #bicycle #bikechi #coffeeride #LoveStarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000013.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000006.jpg" title="#lovestarraceclub mechanic game is strong." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarraceclub mechanic game is strong.</small>
+                           </div>
+                           <img src="../lsphotos/image000006.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000014.jpg" title="Great weekend of racing at #ILRcx. Took a pair of top tens today. Really going to miss this course. #lovestarraceclub 📸@casa.de.cross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Great weekend of racing at #ILRcx. Took a pair of top tens today. Really going to miss this course. #lovestarraceclub 📸@casa.de.cross</small>
+                           </div>
+                           <img src="../lsphotos/image000014.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000008.jpg" title="Tree Huggers. #bikechi #bicycle #cycling #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -181,84 +259,6 @@
                               <small>First cross race. #cyclocross #cx #cycling #bicycle #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000023.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000024.jpg" title="2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>2nd podium of the day! #BabyARC taking the top spot in the kids under 2yo race 😜 #cyclocross #cx #bicycle #cycling #striderbikes #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000024.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000025.jpg" title="Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Huge congrats to Rob for taking the top spot in the men's 4/5 race today! #cyclocross #cx #bicycle #cycling #crossishere #LovestarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000025.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000026.jpg" title="It's got to be these new kits...way to go, Rob! #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>It's got to be these new kits...way to go, Rob! #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000026.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000027.jpg" title="Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Bikes, barriers, and burrs, oh my! #cyclocross #lovestarraceclub #evanston</small>
-                           </div>
-                           <img src="../lsphotos/image000027.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000028.jpg" title="Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold, wet and windy ride this morning. Recovering with coffee and the smiling faces of the #LovestarRaceClub crew. #bicycle #cycling #bikechi #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000028.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000092.jpg" title="Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this slick #LovestarBicycleBags shop apron. Lots of great features, heavy duty materials, and handmade construction...🚲🛠🔩⚙ #handmade #shoplife #bicycle #cycling #bikemechanic #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000092.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
